# claude-utils

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOMEBREW_TAP_SETUP.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: design-document.md  implementation-status.md  research-findings.md  watch-mode-architecture.md
examples/: claude-code-setup.md  mcp-config.json  quick-start.sh
src/: lib.rs  main_test.rs
src/clipboard/: mod.rs  processor.rs  watcher.rs
src/file_manager/: mod.rs
src/mcp/: auth.rs  mod.rs  protocol.rs  server.rs
tests/: integration_test.rs
